openmediavault (6.0.1-1) unstable; urgency=low

  * Fix issue when editing a power management task.
  * Issue #1127: Support ed25519 SSH public keys in the user
    settings dialog.
  * Issue #1137: Display escaped HTML characters correctly.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 09 Nov 2021 00:17:47 +0100

openmediavault (6.0-34) unstable; urgency=low

  * Reimplement UI.
  * /dev/disk/by-label filesystem device files are not supported
    anymore because they are not unique and predictable.
  * The file system page will only show file systems configured
    by OMV from now on. This is the standard behavior of the user
    interface that all other pages use.
  * Adapt 'FileSystemMgmt' RPCs to new workflow.
  * Upgrade to Debian 11.
    - Replace pam_tally2 by pam_faillock
  * Introduce environment variable OMV_POSTFIX_MAIN_DEFAULT_TRANSPORT.
    To deactivate the sending of emails without affecting the
    additional notification sinks set it to 'discard'.
  * Add option to FTP settings to display the home directory of the
    user in the browse list.
  * Add environments variables OMV_POWERMGMT_REBOOT, OMV_POWERMGMT_POWEROFF,
    OMV_POWERMGMT_SUSPEND, OMV_POWERMGMT_HIBERNATE and
    OMV_POWERMGMT_HYBRIDSLEEP to customize the reboot, power-off, ...
    power management commands.
  * Announcing services via Zeroconf is an essential feature of
    openmediavault, nevertheless there is sometimes the need to disable
    this feature completely instead of just individual services via the
    already existing environment variables. To completely disable the
    feature set the environment variable OMV_ZEROCONF_ENABLED to 'no'.
    Please note that this can have unexpected side effects.
  * Enhance the SMART temperature monitoring configuration.
    Global settings can be overwritten per device. Please check
    your settings whether the migration was correct or reconfigure
    them if necessary.
  * Added SMART status dashboard widget.